# NTS

./: README.md  auto_align.py  clean.py  dedup.py  edit.py  main.py  manual_align.py  prepare_data.py  pyproject.toml  scrape.py  scrapy.cfg
finetune_configs/: bananabernini_12b.yaml  bananabernini_27b.yaml  bananabernini_32b.yaml  bananabernini_8b.yaml
output/: A Regressor’s Tale of Cultivation.json  test_data.jsonl  training_data_skipped_report.json
output/So, Did Someone Force You to Become the Heavenly Demon/: chapters_english.json
output/Stop, Friendly Fire!/: chapters_english.json
scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/extractors/: __init__.py  base.py  booktoki.py  lightnovelpub.py  lightnovelpup.py  mythic_regressor.py  novelfire.py  wetriedtls.py
scraper/spiders/: __init__.py  base.py  booktoki.py  lightnovelpub.py  lightnovelpup.py  mythic_regressor.py  novelfire.py  wetriedtls.py
