[project]
name = "novel-translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "brotli>=1.1.0",
    "fake-useragent>=2.2.0",
    "pandas>=2.3.3",
    "playwright-stealth>=2.0.0",
    "scrapy>=2.13.3",
    "scrapy-playwright>=0.0.44",
    "streamlit>=1.51.0",
]
